--- a/SI140A-hw8/HW08-sol.ipynb
+++ b/SI140A-hw8/HW08-sol.ipynb
@@ -647,21 +647,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The average number of sites opened when the grid size is 20 is 0.588375\n",
-      "The average number of sites opened when the grid size is 50 is 0.588612\n",
-      "The average number of sites opened when the grid size is 100 is 0.5921310000000001\n"
+      "The average number of sites opened when the grid size is 20 is 0.58973\n",
+      "The average number of sites opened when the grid size is 50 is 0.5908696\n",
+      "The average number of sites opened when the grid size is 100 is 0.5923298\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
+    "import random\n",
     "\n",
     "# DSU\n",
     "class DSU:\n",
@@ -686,10 +687,37 @@
     "        self.parent[node2] = self.find(node2)\n",
     "        self.parent[self.parent[node1]] = self.parent[node2]\n",
     "\n",
+    "def perlocation(i):\n",
+    "    # define the grid\n",
+    "    grid = np.array(np.zeros((i, i)))\n",
+    "    # define the DSU\n",
+    "    dsu = DSU(i, i)\n",
+    "    # define the number of sites opened\n",
+    "    sites_opened = 0\n",
+    "    # loop until the system percolates\n",
+    "    while True:\n",
+    "        # sites opened\n",
+    "        sites_opened += 1\n",
+    "        # choose one site randomly\n",
+    "        where = np.where(grid == 0)\n",
+    "        rand_index = random.randint(0, np.shape(where)[1] - 1)\n",
+    "        free_site = [where[0][rand_index], where[1][rand_index]]\n",
+    "        # let the site open\n",
+    "        grid[free_site[0], free_site[1]] = 1\n",
+    "        # define four directions\n",
+    "        directions = [[-1, 0], [1, 0], [0, -1], [0, 1]]\n",
+    "        # loop for four directions\n",
+    "        for k in directions:\n",
+    "            if 0 <= free_site[0] + k[0] and free_site[0] + k[0] < i and 0 <= free_site[1] + k[1] and free_site[1] + k[1] < i and grid[free_site[0] + k[0], free_site[1] + k[1]] == 1:\n",
+    "                dsu.union((free_site[0], free_site[1]), (free_site[0] + k[0], free_site[1] + k[1]))\n",
+    "        # if the system percolates\n",
+    "        if dsu.find((0, 0)) == dsu.find((i - 1, i - 1)):\n",
+    "            return sites_opened\n",
+    "\n",
     "# define grid size\n",
     "grid_size = [20, 50, 100]\n",
     "# define the number of monte carlo simulation\n",
-    "N = 100\n",
+    "N = 1000\n",
     "# result\n",
     "result = [0, 0, 0]\n",
     "# loop\n",
@@ -698,32 +726,8 @@
     "    sum = 0\n",
     "    # loop for monte carlo\n",
     "    for j in range(N):\n",
-    "        # define the grid\n",
-    "        grid = np.array(np.zeros((i, i)))\n",
-    "        # define the DSU\n",
-    "        dsu = DSU(i, i)\n",
-    "        # define the number of sites opened\n",
-    "        sites_opened = 0\n",
-    "        # loop until the system percolates\n",
-    "        while True:\n",
-    "            # sites opened\n",
-    "            sites_opened += 1\n",
-    "            # choose one site randomly\n",
-    "            where = np.where(grid == 0)\n",
-    "            rand_index = random.randint(0, np.shape(where)[1] - 1)\n",
-    "            free_site = [where[0][rand_index], where[1][rand_index]]\n",
-    "            # let the site open\n",
-    "            grid[free_site[0], free_site[1]] = 1\n",
-    "            # define four directions\n",
-    "            directions = [[-1, 0], [1, 0], [0, -1], [0, 1]]\n",
-    "            # loop for four directions\n",
-    "            for k in directions:\n",
-    "                if 0 <= free_site[0] + k[0] and free_site[0] + k[0] < i and 0 <= free_site[1] + k[1] and free_site[1] + k[1] < i and grid[free_site[0] + k[0], free_site[1] + k[1]] == 1:\n",
-    "                    dsu.union((free_site[0], free_site[1]), (free_site[0] + k[0], free_site[1] + k[1]))\n",
-    "            # if the system percolates\n",
-    "            if dsu.find((0, 0)) == dsu.find((i - 1, i - 1)):\n",
-    "                sum += sites_opened\n",
-    "                break\n",
+    "        # single simulation\n",
+    "        sum += perlocation(i)\n",
     "    \n",
     "    result[grid_size.index(i)] = sum / N\n",
     "\n",
