--- a/SI140A-hw8/HW08-sol.ipynb
+++ b/SI140A-hw8/HW08-sol.ipynb
@@ -5,6 +5,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Homework #08\n",
+    "\n",
+    "Name : Wang Penghao\n",
+    "\n",
+    "Student ID : 2021533138\n",
+    "\n",
     "# Problem 1"
    ]
   },
