--- a/SI140A-hw9/HW09-sol.tex
+++ b/SI140A-hw9/HW09-sol.tex
@@ -144,7 +144,14 @@
 
 \begin{homeworkProblem}[1]
 
-
+\begin{enumerate}
+    \item As for the joint PMF of X, Y, N, we have that the PMF is $P(X = x, Y = y, N = n)$, then as we have that $N = X + Y$, then only when $x + y = n$, will the PMF be non-zero. So we have that
+        $$P(X = x, Y = y, N = n) = P(X = x, Y = y) = (1 - p)^x * p * (1 - p)^y * p = (1 - p)^{x + y}p^2$$, as we have that $x + y = n$, so we get that $$P(X = x, Y = y, N = n) = (1 - p)^np^2$$
+    \item As for the joint PMF os X, N, we have that the PMF is $P(X = x, N = n)$, as only when $n = x + y$ will the PMF be non-zero, so we have that
+        $$P(X = x, N = n) = P(X = x, Y = n - x) = (1 - p)^xp(1 - p)^{n - x}p = (1 - p)^np^2$$
+    \item As for the conditional PMF of $X$ given $N = n$, we have that the PMF is $$P(X = x | N = n) = \dfrac{P(X = x, N = n)}{P(N = n)}. $$
+        The numerator is the joint PMF of $X$ and $N$, which is $P(X = x, N = n) = (1 - p)^np^2$, and the denominator is the marginal PMF of $N$, which is $P(N = n) = (1 - p)^np^2 + (1 - p)^np^2 = 2(1 - p)^np^2$, so we have that $$P(X = x | N = n) = \dfrac{P(X = x, N = n)}{P(N = n)} = \dfrac{(1 - p)^np^2}{2(1 - p)^np^2} = \dfrac{1}{2}$$
+\end{enumerate}
 
 \end{homeworkProblem}
 
