--- a/SI140A-hw11/HW11-sol.tex
+++ b/SI140A-hw11/HW11-sol.tex
@@ -144,70 +144,41 @@
 
 \begin{homeworkProblem}[1]
 
-\begin{enumerate}
-    % inline
-    \item 
-    \( f(n) \)
-    
-    \item
-    $ f(n) $
-    
-    \item
-   	\begin{math}
-   		f(n)
-    \end{math}
-    
-    % Display mode
-    \item
-    \[
-    	f(n)
-    \]
-    
-    \item 
-    $$ 
-    	f(n)
-    $$
-    
-    \item
-    \begin{equation}
-        	f(n)
-    \end{equation}
+\begin{enumerate}[(a)]
+    \item As for $(X, Y, X+Y)$, we have that 
 \end{enumerate}
 
 \end{homeworkProblem}
 
+\newpage
+
 \begin{homeworkProblem}[2]
 
-\begin{enumerate}
-	% alignment
-	\item
-    \[
-    	\begin{split}
-	    		n^{2} + n + 1 
-	    		\le ~& n^{2} + n^{2} + n^{2} \\
-	    		= ~& 3 n^{2} \\
-	    		\le ~& c \cdot 2 n^{3}
-	    	\end{split}
-    \]
+
+
+\end{homeworkProblem}
+
+\newpage
+
+\begin{homeworkProblem}[3]
     
-    \item
-    \begin{equation}
-    	\begin{aligned}
-	    		n^{2} + n + 1 
-	    		\le ~& n^{2} + n^{2} + n^{2} \\
-	    		= ~& 3 n^{2} \\
-	    		\le ~& c \cdot 2 n^{3}
-		\end{aligned}
-	\end{equation}
-	
-	\item
-	\begin{align}
-	    	n^{2} + n + 1 
-	    	\le ~& n^{2} + n^{2} + n^{2} \\
-	    	= ~& 3 n^{2} \\
-	    	\le ~& c \cdot 2 n^{3}
-	\end{align}
-\end{enumerate}
+
+
+\end{homeworkProblem}
+
+\newpage
+
+\begin{homeworkProblem}[4]
+    
+
+
+\end{homeworkProblem}
+
+\newpage
+
+\begin{homeworkProblem}[5]
+    
+
 
 \end{homeworkProblem}
 
